# af-server-bot

./: .gitignore  go.mod  go.sum  main.go
bot/: bot.go
bot/commands/: commands.go
bot/shared/: shared.go
cpp-source/: CMakeLists.txt
cpp-source/src/: a2s_api.cc  a2s_query_handler.cc  a2s_query_handler.h  a2s_query_handler_wrapper.cc  a2s_query_handler_wrapper.h  a2s_test_main.cc
cpp-src/: .gitignore  CMakeLists.txt  go.mod  main.go
cpp-src/src/: a2s_api.cc  a2s_query_handler.cc  a2s_query_handler_wrapper.cc  a2s_test_main.cc  main.cc  steamworks_api.cc  steamworks_api.h  steamworks_api_wrapper.cc  steamworks_api_wrapper.h
unused-extra/steam-web-api/: serverquery.go
unused-extra/steamworks-api/: steamworks_api_wrapper.cc  steamworks_api_wrapper.h
